[tool.poetry]
name = "wode"
version = "0.1.0"
description = ""
authors = ["Hannes"]
readme = "README.md"
packages = [{ include = "wode" }]

[tool.poetry.dependencies]
python = "^3.10"
koda = "^1.4.0"
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"
isort = "^5.11.1"
pdbpp = "^0.10.3"
pydocstyle = "^6.1.1"
pyright = "^1.1.283"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-timeout = "^2.1.0"
ssort = "^0.11.6"

[tool.poetry.scripts]
wode = "wode:cli"

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E501", "E203", "W503", "F401"]

[tool.pytest.ini_options]
timeout = 0.1
addopts = "--cov=wode --cov-report=html"

[tool.pyright]
strict = ["**/*"]

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
